--- a/railway-deployment/runner/Dockerfile
+++ b/railway-deployment/runner/Dockerfile
@@ -83,6 +83,8 @@ RUN echo "Installing Python packages: ${PY_PACKAGES}" && \
         linux-headers \
         openblas-dev \
         lapack-dev && \
+		ffmpeg && \
+		curl && \
       pip install --no-cache-dir -r requirements.txt; \
     else \
       touch requirements.txt; \
