--- a/railway-deployment/runner/Dockerfile
+++ b/railway-deployment/runner/Dockerfile
@@ -82,8 +82,7 @@ RUN echo "Installing Python packages: ${PY_PACKAGES}" && \
         musl-dev \
         linux-headers \
         openblas-dev \
-		ffmpeg \
-		curl \
+		python3 \
         lapack-dev && \
       pip install --no-cache-dir -r requirements.txt; \
     else \
